; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_mtk_offload.c_mtk_offload_keepalive.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/ramips/files-4.14/drivers/net/ethernet/mediatek/extr_mtk_offload.c_mtk_offload_keepalive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fe_priv = type { i32* }
%struct.flow_offload = type { i64 }

@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fe_priv*, i32)* @mtk_offload_keepalive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mtk_offload_keepalive(%struct.fe_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.fe_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.flow_offload*, align 8
  store %struct.fe_priv* %0, %struct.fe_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @rcu_read_lock()
  %7 = load %struct.fe_priv*, %struct.fe_priv** %3, align 8
  %8 = getelementptr inbounds %struct.fe_priv, %struct.fe_priv* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds i32, i32* %9, i64 %11
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.flow_offload* @rcu_dereference(i32 %13)
  store %struct.flow_offload* %14, %struct.flow_offload** %5, align 8
  %15 = load %struct.flow_offload*, %struct.flow_offload** %5, align 8
  %16 = icmp ne %struct.flow_offload* %15, null
  br i1 %16, label %17, label %25

17:                                               ; preds = %2
  %18 = load i64, i64* @jiffies, align 8
  %19 = load i32, i32* @HZ, align 4
  %20 = mul nsw i32 30, %19
  %21 = sext i32 %20 to i64
  %22 = add nsw i64 %18, %21
  %23 = load %struct.flow_offload*, %struct.flow_offload** %5, align 8
  %24 = getelementptr inbounds %struct.flow_offload, %struct.flow_offload* %23, i32 0, i32 0
  store i64 %22, i64* %24, align 8
  br label %25

25:                                               ; preds = %17, %2
  %26 = call i32 (...) @rcu_read_unlock()
  ret void
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.flow_offload* @rcu_dereference(i32) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
